change swagger docs
