# docs/swagger.json
@@ -16,16 +16,19 @@
                         "JWT": []
                     }
                 ],
+                "description": "Get the current balance of the user's loyalty points account.",
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Gophermart HTTP API"
+                ],
                 "summary": "Get user balance",
-                "operationId": "balance",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_KryukovO_gophermart_internal_gophermart_entities.Balance"
+                            "$ref": "#/definitions/Balance"
                         }
                     },
                     "401": {
@@ -50,11 +53,25 @@
                         "JWT": []
                     }
                 ],
+                "description": "Withdraw points from the loyalty points account to pay for a new order.",
                 "consumes": [
                     "application/json"
                 ],
+                "tags": [
+                    "Gophermart HTTP API"
+                ],
                 "summary": "Withdrawal request",
-                "operationId": "withdraw",
+                "parameters": [
+                    {
+                        "description": "Order number and withdrawal sum.",
+                        "name": "withdrawal",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/BalanceChange"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -88,11 +105,25 @@
         },
         "/api/user/login": {
             "post": {
+                "description": "User authorization by login and password.",
                 "consumes": [
                     "application/json"
                 ],
+                "tags": [
+                    "Gophermart HTTP API"
+                ],
                 "summary": "User authorization",
-                "operationId": "login",
+                "parameters": [
+                    {
+                        "description": "User login and password.",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -125,19 +156,22 @@
                         "JWT": []
                     }
                 ],
-                "consumes": [
-                    "text/plain"
-                ],
+                "description": "Get a list of order numbers uploaded by the user,\ntheir processing statuses and information about accruals.",
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Gophermart HTTP API"
+                ],
                 "summary": "Get uploaded orders",
-                "operationId": "orders",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_KryukovO_gophermart_internal_gophermart_entities.Order"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Order"
+                            }
                         }
                     },
                     "204": {
@@ -163,11 +197,25 @@
                         "JWT": []
                     }
                 ],
+                "description": "Loading by the user of the order number.",
                 "consumes": [
-                    "application/json"
+                    "text/plain"
+                ],
+                "tags": [
+                    "Gophermart HTTP API"
                 ],
                 "summary": "Add new order",
-                "operationId": "add-order",
+                "parameters": [
+                    {
+                        "description": "Order number.",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -210,11 +258,25 @@
         },
         "/api/user/register": {
             "post": {
+                "description": "User registration by login and password.",
                 "consumes": [
                     "application/json"
                 ],
+                "tags": [
+                    "Gophermart HTTP API"
+                ],
                 "summary": "User registration",
-                "operationId": "register",
+                "parameters": [
+                    {
+                        "description": "User login and password.",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -247,16 +309,19 @@
                         "JWT": []
                     }
                 ],
+                "description": "Get a list of withdrawals from a user's loyalty points account.",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Withdrawal information",
-                "operationId": "withdrawal-info",
+                "tags": [
+                    "Gophermart HTTP API"
+                ],
+                "summary": "Get withdrawals list",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_KryukovO_gophermart_internal_gophermart_entities.BalanceChange"
+                            "$ref": "#/definitions/BalanceChange"
                         }
                     },
                     "204": {
@@ -279,13 +344,8 @@
         }
     },
     "definitions": {
-        "echo.HTTPError": {
-            "type": "object",
-            "properties": {
-                "message": {}
-            }
-        },
-        "github_com_KryukovO_gophermart_internal_gophermart_entities.Balance": {
+        "Balance": {
+            "description": "User's loyalty points account balance.",
             "type": "object",
             "properties": {
                 "current": {
@@ -296,7 +356,8 @@
                 }
             }
         },
-        "github_com_KryukovO_gophermart_internal_gophermart_entities.BalanceChange": {
+        "BalanceChange": {
+            "description": "Change of the user's loyalty points account balance.",
             "type": "object",
             "properties": {
                 "order": {
@@ -310,7 +371,8 @@
                 }
             }
         },
-        "github_com_KryukovO_gophermart_internal_gophermart_entities.Order": {
+        "Order": {
+            "description": "Order data.",
             "type": "object",
             "properties": {
                 "accrual": {
@@ -325,6 +387,24 @@
                 "uploaded_at": {
                     "type": "string"
                 }
+            }
+        },
+        "User": {
+            "description": "User account data.",
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "echo.HTTPError": {
+            "type": "object",
+            "properties": {
+                "message": {}
             }
         }
     },
