# internal/gophermart/entities/balance.go
@@ -14,19 +14,21 @@ const (
 	BalanceOperationWithdrawal string = "withdrawal"
 )
 
+// @Description User's loyalty points account balance.
 type Balance struct {
-	UserID    int64   `json:"-"`
-	Current   float64 `json:"current"`
-	Withdrawn float64 `json:"withdrawn"`
-}
+	UserID    int64   `json:"-"         swaggerignore:"true"`
+	Current   float64 `json:"current"   swaggerignore:"false"`
+	Withdrawn float64 `json:"withdrawn" swaggerignore:"false"`
+} // @name Balance
 
+// @Description Change of the user's loyalty points account balance.
 type BalanceChange struct {
-	UserID      int64     `json:"-"`
-	Operation   string    `json:"-"`
-	Order       string    `json:"order"`
-	Sum         float64   `json:"sum"`
-	ProcessedAt time.Time `json:"processed_at,omitempty"`
-}
+	UserID      int64     `json:"-"                      swaggerignore:"true"`
+	Operation   string    `json:"-"                      swaggerignore:"true"`
+	Order       string    `json:"order"                  swaggerignore:"false"`
+	Sum         float64   `json:"sum"                    swaggerignore:"false"`
+	ProcessedAt time.Time `json:"processed_at,omitempty" swaggerignore:"false"`
+} // @name BalanceChange
 
 func (operation *BalanceChange) Validate() error {
 	if ok := utils.LuhnCheck(operation.Order); !ok {
